fix: new_lead_received notification

--- a/config/database.yml
+++ b/config/database.yml
@@ -1,11 +1,17 @@
 development:
   adapter: postgresql
+  host: localhost
+  user: postgres
+  password: postgres
   database: sac_gpt_database_development
   pool: 10
   timeout: 5000
 
 test:
   adapter: postgresql
+  host: localhost
+  user: postgres
+  password: postgres
   database: sac_gpt_database_test
   pool: 10
   timeout: 5000
