--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -12,11 +12,11 @@ services:
     environment:
       # Environment variables from https://waha.devlike.pro/docs/how-to/config/
       - WHATSAPP_RESTART_ALL_SESSIONS=True
-      - WHATSAPP_HOOK_URL=https://webhook.site/b6538f2e-1b4f-491d-b220-9129f41497ea
+      - WHATSAPP_HOOK_URL=https://sac-gpt.herokuapp.com
       - WHATSAPP_HOOK_EVENTS=message,session.status
-      - WHATSAPP_API_KEY=humanoide-token-123
-      # - WHATSAPP_SWAGGER_USERNAME=admin
-      # - WHATSAPP_SWAGGER_PASSWORD=123
+      - WHATSAPP_API_KEY=eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJuYW1lIjoiSHVtYW5vaWRlIn0.rroyrq29CEa883aWmiRQewPUtufYX8qkI99j3k64MS0
+      - WHATSAPP_SWAGGER_USERNAME=admin
+      - WHATSAPP_SWAGGER_PASSWORD=123
       - WAHA_DASHBOARD_USERNAME=admin
       - WAHA_DASHBOARD_PASSWORD=123
       - WHATSAPP_API_HOSTNAME=localhost
